--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <h1>hello world!</h1>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur sequi, quod blanditiis
+      mollitia dolor enim asperiores modi sapiente eum ad praesentium tempore laborum quo minima
+      iste id voluptatum unde fuga.
+    </p>
+    <nav class="navbar">
+      <ul class="navbar__list">
+        <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Contact</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">about us</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
