--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
         <li class="navbar__item"><a href="#" class="navbar__link">Contact</a></li>
         <li class="navbar__item"><a href="#" class="navbar__link">about us</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Services</a></li>
       </ul>
     </nav>
   </body>
